<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.Step3Activity">

    <TextView
        android:id="@+id/tv_step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/label_step3"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_height"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/til_zip"
        app:layout_constraintEnd_toStartOf="@+id/til_feet"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_zip"
        app:layout_constraintTop_toTopOf="@+id/til_zip" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_full_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@color/colorText"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_step3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_full_name"
            android:inputType="text"
            android:backgroundTint="@color/colorText"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_zip"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/colorText"

        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_zip"
            android:backgroundTint="@color/colorText"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_feet"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@color/colorText"
        app:counterMaxLength="2"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/til_inch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/til_full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_feet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_feet"
            android:backgroundTint="@color/colorText"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_inch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@color/colorText"
        app:counterMaxLength="2"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/til_feet"
        app:layout_constraintTop_toBottomOf="@id/til_full_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_inch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_inch"
            android:backgroundTint="@color/colorText"
            android:inputType="number"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_next"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="goStep4"
        android:text="@string/label_next"
        android:textAllCaps="true"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="bold"
        app:icon="@drawable/baseline_navigate_next_white_24"
        app:iconTint="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>